siebel/4.1/modules/ROOT/pages/siebel-connector-reference.adoc
= Oracle Siebel Connector 4.1 Reference - Mule 4
:page-aliases: connectors::siebel/siebel-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Premium]

Oracle Siebel Connector v4.0

Anypoint Connector for Oracle Siebel (Siebel Connector) lets you access connections between Mule runtime engine (Mule) integration apps and the Oracle Siebel customer relationship manager (CRM).

Release Notes: xref:release-notes::connector/siebel-connector-release-notes-mule-4.adoc[Oracle Siebel Connector Release Notes]


== Configurations
---
[[siebel]]
=== Siebel


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<siebel_basic, Username Password>>
 | The connection types to provide to this configuration. | | x
| Default View Mode Bus Comp a| Number |  |  +++3+++ |
| Data Sense Flter Query Bus Objects a| String |  |  |
| Data Sense Filter Query a| String |  |  |
| Data Sense Filter Query Bus Comp a| String |  |  |
| Data Sense Filter Query Int Objects a| String |  |  |
| DataSense Filters a| Number |  |  +++3+++ |
| Other a| Boolean |  |  +++true+++ |
| Synchronized calls a| Boolean |  +++Enable this checkbox to synchronize calls made to the operations. Do so only if making multiple calls at the same time results in error messages from Siebel.+++ |  +++false+++ |
| Expiration Policy a| <<ExpirationPolicy>> |  +++Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate.+++ |  |
|===

==== Connection Types
[[siebel_basic]]
===== Username Password


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| User a| String |  |  | x
| Password a| String |  |  | x
| Server/Virtual Server a| String | For multiple servers, this is the name of the virtual server, for example `virtualserverms`. |  | x
| Port a| String |  |  +++2321+++ |
| Server Name a| String |  |  | x
| RSA Encryption a| Boolean |  |  +++false+++ |
| Object Manager a| String |  |  | x
| Language a| String |  |  +++ENU+++ |
| Encoding a| String |  |  +++utf8+++ |
| Virtual Server Address  a| String | Virtual server name, used only for the load balancing setup.  |  +++ +++ |


| Reconnection a| <<Reconnection>> |  +++When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy.+++ |  |
|===

== Supported Operations
* <<createBusinessComponent>>
* <<deleteBusinessComponent>>
* <<execute>>
* <<executeBusinessService>>
* <<executeSiebelAdapter>>
* <<queryBusinessComponents>>
* <<queryJoinBusinessComponents>>
* <<updateBusinessComponent>>
* <<upsertBusinessComponent>>



== Operations

[[createBusinessComponent]]
=== Create Business Component
`<siebel:create-business-component>`

+++
Creates a new business component.
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Business Object Component Type a| String |  +++Siebel's business object component type.+++ |  | x
| Business Component Fields a| Object |  +++Map with the list of values to be added to the new component.+++ |  `#[payload]` |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
| VirtualServer addresss a| String | Used to specify the load balancing configuration, for example `virtualserverms=host1.com:2321,host2.com:2321`. |  `#[payload]` |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:INVALID_ATTACHMENT
* SIEBEL:CONNECTIVITY
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:UNKNOWN


[[deleteBusinessComponent]]
=== Delete Business Component
`<siebel:delete-business-component>`

+++
Deletes a Siebel business component record from Id.
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Business Object Component Type a| String |  +++Siebel's business object component type.+++ |  | x
| Business Component Id a| String |  +++ID of the business component to be deleted.+++ |  | x
| View Mode a| Number |  +++Siebel business component view mode.+++ |  +++3+++ |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Boolean
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:INVALID_ATTACHMENT
* SIEBEL:CONNECTIVITY
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:UNKNOWN


[[execute]]
=== Execute
`<siebel:execute>`

+++
Executes a Siebel Service using SiebelPropertySets
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Service Name a| String |  +++Siebel's business service.+++ |  | x
| Method Name a| String |  +++Method to execute.+++ |  | x
| Input a| Object |  +++SiebelPropertySet with the input args.+++ |  `#[payload]` |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:CONNECTIVITY


[[executeBusinessService]]
=== Execute Business Service
`<siebel:execute-business-service>`

+++
Executes a Siebel Service using Maps instead of SiebelPropertySet.
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Business Service a| String |  +++Siebel's business service.+++ |  | x
| Input Properties a| Object |  +++Map with the input for the method.+++ |  `#[payload]` |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:CONNECTIVITY


[[executeSiebelAdapter]]
=== Execute Siebel Adapter
`<siebel:execute-siebel-adapter>`

+++
Execute an operation for a Siebel Integration Object using EAI Siebel Adapter.
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Method a| Enumeration, one of:

** INSERT
** UPSERT
** UPDATE
** DELETE
** QUERY
** QUERY_PAGE
** EXECUTE
** SYNCHRONIZE |  +++EAI Siebel Adapter method.+++ |  | x
| Integration Object a| String |  +++Siebel's integration object.+++ |  | x
| Input Properties a| Object |  +++Map with the integration object fields.+++ |  `#[payload]` |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:CONNECTIVITY


[[queryBusinessComponents]]
=== Query Business Components
`<siebel:query-business-components>`

+++
Retrieves a list of business components depending on a given search spec or search expression.
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Business Object Component Type a| String |  +++Siebel's business object component type.+++ |  | x
| Query Definition a| <<QueryDefinition>> |  +++Object defining the query to execute.+++ |  `#[payload]` |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:INVALID_ATTACHMENT
* SIEBEL:CONNECTIVITY
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:UNKNOWN


[[queryJoinBusinessComponents]]
=== Query Join Business Components
`<siebel:query-join-business-components>`

+++
Allows retrieving two different business object, joining them according to an specified criteria.
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Business Object Component Type a| String |  +++Siebel's business object component type.+++ |  | x
| Query To Join Definition a| <<QueryToJoinDefinition>> |  +++Object containing the join definition for the business object.+++ |  `#[payload]` |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:INVALID_ATTACHMENT
* SIEBEL:CONNECTIVITY
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:UNKNOWN


[[updateBusinessComponent]]
=== Update Business Component
`<siebel:update-business-component>`

+++
Updates Siebel business component from values map.
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Business Object Component Type a| String |  +++Siebel's business object component type.+++ |  | x
| Search Spec a| Object |  +++Map containing the spec for searching business components to update.+++ |  | x
| Business Component Fields a| Object |  +++Map with the list of values to be updated in the component.+++ |  `#[payload]` |
| View Mode a| Number |  +++Siebel business component view mode.+++ |  +++3+++ |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:INVALID_ATTACHMENT
* SIEBEL:CONNECTIVITY
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:UNKNOWN


[[upsertBusinessComponent]]
=== Upsert Business Component
`<siebel:upsert-business-component>`

+++
Creates or updates a business component depending on whether it already exists. To check if the record exists, it queries Siebel, taking into account the list of recordIds. If the list is null, it takes the Id field from the business component fields map.
+++

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Business Object Component Type a| String |  +++Siebel's business object component type.+++ |  | x
| Business Component Fields a| Object |  +++Map with the list of values to be updated in the component.+++ |  `#[payload]` |
| Record Ids a| Array of String |  +++List of fields to be taken as identifiers of the record to analyze if it should be created or not.+++ |  |
| View Mode a| Number |  +++Siebel business component view mode.+++ |  +++3+++ |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<UpsertResult>>
|===

=== For Configurations
* <<siebel>>

==== Throws
* SIEBEL:INVALID_ATTACHMENT
* SIEBEL:CONNECTIVITY
* SIEBEL:RETRY_EXHAUSTED
* SIEBEL:UNKNOWN



== Types
[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[QueryDefinition]]
=== Query Definition

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fields a| Array of String |  |  |
| Records a| String |  |  |
| Search Expression a| String |  |  |
| Search Spec a| Object |  |  |
| Sort Spec a| String |  |  |
| View Mode a| Number |  |  |
|===

[[QueryToJoinDefinition]]
=== Query To Join Definition

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Business Object Component Type To Join a| String |  |  |
| Fields a| Array of String |  |  |
| Fields To Retrieve Join a| Array of String |  |  |
| Join Condition a| Object |  |  |
| Records a| String |  |  |
| Search Expression a| String |  |  |
| Search Spec a| Object |  |  |
| View Mode a| Number |  |  |
|===

[[UpsertResult]]
=== Upsert Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Created Object Id a| String |  |  |
| Updated Objects a| Array of String |  |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
